# gesture-controlled-drone

./: README.md
src/human_tracking_controls/: CMakeLists.txt  package.xml
src/human_tracking_controls/include/human_tracking_controls/PID_Controller/: pid_controller.hpp
src/human_tracking_controls/src/: mavros_hand_guesture_controls_rishabh.cpp  mavros_hand_guesture_controls_soumya.cpp  mavros_yaw_body_tracking.cpp  script.sh
src/object_tracker/: package.xml  setup.py
src/object_tracker/object_tracker/: process_frame.py  process_frame_1.py  process_frame_2.py  tracker_rishabh.py  tracker_rpi_numpy.py  tracker_soumya.py
